{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 1714,
  "lineage": "c905d27f-ee3b-4117-766c-95c7c020ab56",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:security-group/sg-0737ed955233d269b",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a377246e25d226db"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a377246e25d226db"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0737ed955233d269b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a377246e25d226db"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eks-cluster-2023100516454915560000000d",
            "name_prefix": "my-eks-cluster-",
            "owner_id": "819401076850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:security-group/sg-0a377246e25d226db",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737ed955233d269b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0a377246e25d226db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0512e61621884b1ec"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from control plane to webhook port of AWS load balancer controller",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737ed955233d269b"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737ed955233d269b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0737ed955233d269b"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "my-eks-node-2023100516454915030000000c",
            "name_prefix": "my-eks-node-",
            "owner_id": "819401076850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "my-eks-node",
              "kubernetes.io/cluster/my-eks": "owned"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "my-eks-node",
              "kubernetes.io/cluster/my-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3031694331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737ed955233d269b",
            "security_group_rule_id": "sgr-0f7c1981d8baae8a7",
            "self": false,
            "source_security_group_id": "sg-0a377246e25d226db",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4088493138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737ed955233d269b",
            "security_group_rule_id": "sgr-03f9436f1622de55a",
            "self": false,
            "source_security_group_id": "sg-0a377246e25d226db",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2970790420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0737ed955233d269b",
            "security_group_rule_id": "sgr-0f7c1981d8baae8a7",
            "self": false,
            "source_security_group_id": "sg-0a377246e25d226db",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3400818444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-0bf58b40cd46053cd",
            "self": false,
            "source_security_group_id": "sg-0737ed955233d269b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1433773735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-008c19321c9a58c6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2326502329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-0ea3ab10aaba66f8b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-4097162932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-09aacdec379b6283f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3118771963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-00148910373d5c806",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-931343517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-00c426de48dec50b6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_allow_access_from_control_plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from control plane to webhook port of AWS load balancer controller",
            "from_port": 9443,
            "id": "sgrule-2804580659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-0c7166be3266062d5",
            "self": false,
            "source_security_group_id": "sg-0737ed955233d269b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2986771163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-0bf58b40cd46053cd",
            "self": false,
            "source_security_group_id": "sg-0737ed955233d269b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1841193628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-015deb20dcc5537a7",
            "self": false,
            "source_security_group_id": "sg-0737ed955233d269b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2971663681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-0475b8109f62ec5d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-356540078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a377246e25d226db",
            "security_group_rule_id": "sgr-00c426de48dec50b6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"general\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:security-group/sg-0261518977c93f93c",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0261518977c93f93c",
            "ingress": [],
            "name": "general-eks-node-group-2023100516454926590000000f",
            "name_prefix": "general-eks-node-group-",
            "owner_id": "819401076850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "general-eks-node-group"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "general-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"spot\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:security-group/sg-079aa7af8c567f68e",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-079aa7af8c567f68e",
            "ingress": [],
            "name": "spot-eks-node-group-2023100516454922850000000e",
            "name_prefix": "spot-eks-node-group-",
            "owner_id": "819401076850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "spot-eks-node-group"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "spot-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:network-acl/acl-0a25248af66985b41",
            "default_network_acl_id": "acl-0a25248af66985b41",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a25248af66985b41",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "819401076850",
            "subnet_ids": [
              "subnet-01d60abb3d5d2c303",
              "subnet-02082b80d265e37ca",
              "subnet-08422904ba91847be",
              "subnet-0a55b236befcb96fd"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:route-table/rtb-05ad470039e1af187",
            "default_route_table_id": "rtb-05ad470039e1af187",
            "id": "rtb-05ad470039e1af187",
            "owner_id": "819401076850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:security-group/sg-0d5a11ec8b8821278",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d5a11ec8b8821278",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "819401076850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-default"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a0e3b31757dd4f2",
            "association_id": "eipassoc-062422eef33b2821b",
            "domain": "vpc",
            "id": "eipalloc-03a0e3b31757dd4f2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0551abf50a37d8c5c",
            "private_dns": "ip-10-0-93-108.ec2.internal",
            "private_ip": "10.0.93.108",
            "public_dns": "ec2-34-198-40-153.compute-1.amazonaws.com",
            "public_ip": "34.198.40.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "main-us-east-1a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:internet-gateway/igw-07e48d269af49764e",
            "id": "igw-07e48d269af49764e",
            "owner_id": "819401076850",
            "tags": {
              "Environment": "staging",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a0e3b31757dd4f2",
            "association_id": "eipassoc-062422eef33b2821b",
            "connectivity_type": "public",
            "id": "nat-0ddedf7029876e6e0",
            "network_interface_id": "eni-0551abf50a37d8c5c",
            "private_ip": "10.0.93.108",
            "public_ip": "34.198.40.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a55b236befcb96fd",
            "tags": {
              "Environment": "staging",
              "Name": "main-us-east-1a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af80060872ccf7301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ddedf7029876e6e0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af80060872ccf730",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e48d269af49764e",
            "id": "r-rtb-0f7298b3806722b611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7298b3806722b61",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:route-table/rtb-0af80060872ccf730",
            "id": "rtb-0af80060872ccf730",
            "owner_id": "819401076850",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddedf7029876e6e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "main-private"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:route-table/rtb-0f7298b3806722b61",
            "id": "rtb-0f7298b3806722b61",
            "owner_id": "819401076850",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e48d269af49764e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "main-public"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075545bb3ef839a44",
            "route_table_id": "rtb-0af80060872ccf730",
            "subnet_id": "subnet-08422904ba91847be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ef8aa534122e8b",
            "route_table_id": "rtb-0af80060872ccf730",
            "subnet_id": "subnet-02082b80d265e37ca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5ccaadb4312c9dc",
            "route_table_id": "rtb-0f7298b3806722b61",
            "subnet_id": "subnet-0a55b236befcb96fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6b5c645027276d",
            "route_table_id": "rtb-0f7298b3806722b61",
            "subnet_id": "subnet-01d60abb3d5d2c303"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:subnet/subnet-08422904ba91847be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08422904ba91847be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819401076850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "main-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:subnet/subnet-02082b80d265e37ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02082b80d265e37ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819401076850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "main-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:subnet/subnet-0a55b236befcb96fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55b236befcb96fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819401076850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "main-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:subnet/subnet-01d60abb3d5d2c303",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d60abb3d5d2c303",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819401076850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "main-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03536dab0e699229a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819401076850:vpc/vpc-03536dab0e699229a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a25248af66985b41",
            "default_route_table_id": "rtb-05ad470039e1af187",
            "default_security_group_id": "sg-0d5a11ec8b8821278",
            "dhcp_options_id": "dopt-09a7d1f81f583393b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03536dab0e699229a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ad470039e1af187",
            "owner_id": "819401076850",
            "tags": {
              "Environment": "staging",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}